# actix-websocket

./: .env  Cargo.toml  README.md  compose.yml
script/: client_event_test.http
src/main/: app.rs
src/main/module/: greet.rs
src/main/services/: gateway.rs  mod.rs  server_info.rs
src/main/services/api/v1/: mod.rs  websocket.rs
src/main/storage/: db_config.rs  mod.rs
src/main/storage/migrations/: V001__A_schema.sql  V001__B_indexes.sql
