[package]
name = "actix-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "actix_rs"
path = "src/main/lib.rs"

[[bin]]
name = "actix-rs"
path = "src/main/main.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenvy = "0.15.7"
once_cell = "1.20.2"
env_logger = "0.11.5"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
lazy_static = "1.5.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-files = "0.6.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }